<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="196dp"
    tools:ignore="UselessParent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:padding="16dp"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="300dp"
            android:layout_height="75dp"
            android:gravity="left|bottom"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/yesButton"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:gravity="bottom|left"
            android:text="@string/yes"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/noButton"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:gravity="top|left"
            android:text="@string/no"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:gravity="bottom|left"
            android:text="@string/delete"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fakeText"
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:gravity="left|bottom"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            tools:ignore="RtlHardcoded" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="@id/cancel_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.498" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:gravity="top|left"
                android:onClick="onClickButtonCancel"
                android:text="@string/cacnel"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="invisible"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="100dp"
                android:layout_toRightOf="@+id/cancel_button"
                android:layout_height="40dp"
                android:gravity="top|left"
                android:onClick="onClickButtonSave"
                android:text="@string/save"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="invisible"
                tools:ignore="RtlHardcoded" />

        </RelativeLayout>


    </LinearLayout>



</LinearLayout>
